[package]
name = "llguidance-wasm"
version = "0.1.0"
authors = ["Michal Moskal <michal@moskal.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
llguidance_parser = { path = "llguidance/parser" }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
anyhow = "1.0.86"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
log = "0.4.22"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"

[features]
default = []
